# inpy

./: .gitignore  README.md  requirements_dev.txt  setup.cfg
__tests__/: __init__.py
inp_file_snippets/: nodes.inp
src/inpy/: __init__.py  inpy.py
