[metadata]
name = inpy
version = 0.0.1
author = "James Gopsill, Adam McClenaghan"
author_email = "james.gopsill@gmail.com"
description = A tool to parse and modify Abaqus .inp input files.
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src